Fix ui, separated block cards and aligned them

--- a/recipes/burger.css
+++ b/recipes/burger.css
@@ -55,7 +55,7 @@ h1 {
     background-color: lightcoral;
     color: black;
     flex: none;
-    width: 300px;
+    width: 450px;
     padding-left: 50px; 
     border-radius: 15px;
 }   
