--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     color: purple;
-    background-color: lightcyan;
+    background-color: lightsalmon;
     padding: 5px;
 }
 
@@ -11,17 +11,21 @@ h1 {
 }
 
 div {
-    border: 6px solid purple;
-    width: 250px;
+    border: 10px solid purple;
+    width: 450px;
     margin: 20px auto;
     padding: 40px;
     text-align: center;
+    border-radius: 25px;
 }
 
 .content {
     color: darkblue;
     border: 4px solid darkviolet;
-    width:  auto;
+    border-radius: 15px;
+    border-width: 5px;
+    width: 100px;
+    margin: 0px auto;
 }
 
 
